# SmartUpdate

./: CMakeLists.txt  README.md
code/: dpdk_sim.c  hs.c  hs.h  mem_sim.c  pc_eval.c  pc_eval.h  tss.c  tss.h  uthash.h  utils.c  utils.h
scripts/: __init__.py  add_id.py  add_id.sh  confs.py  convert_rules.sh  group.py  linear_search.py  plot.py  range2prefix.py  remove_id.py  rule2prefix.py  smart_fullvolume_update.py  smart_incremental_update.py  split_rules.py  test_update_time.py  test_update_time.sh  tuple-stats.py  utils.py
scripts/group_sets/: acl1_10K_updated  acl1_10K_updated_ll  acl1_10K_updated_ls  acl1_10K_updated_ls_p  acl1_10K_updated_sl  acl1_10K_updated_sl_p  acl1_10K_updated_ss  fw1_10K_ll  fw1_10K_ls  fw1_10K_ls_p  fw1_10K_sl  fw1_10K_sl_p  fw1_10K_ss  fw1_10K_updated  ipc1_10K_ll  ipc1_10K_ls  ipc1_10K_sl  ipc1_10K_ss
test/my_p_rules/: my_acl1_100  my_acl1_10k  my_acl1_1k  my_acl1_20k  my_acl1_300  my_acl1_30k  my_acl1_3k  my_acl1_40k  my_acl1_500  my_acl1_50k  my_acl1_5k  my_acl1_700  my_acl1_7k  my_acl1_900  my_acl1_9k  my_fw1_100  my_fw1_10k  my_fw1_1k  my_fw1_1k_1  my_fw1_1k_2  my_fw1_20k  my_fw1_300  my_fw1_3k  my_fw1_500  my_fw1_5k  my_fw1_700  my_fw1_7k  my_fw1_900  my_fw1_9k  my_ipc1_100  my_ipc1_10k  my_ipc1_1k  my_ipc1_20k  my_ipc1_300  my_ipc1_30k  my_ipc1_3k  my_ipc1_40k  my_ipc1_500  my_ipc1_50k  my_ipc1_5k  (+4 more)
test/my_rules/: my_acl1_100  my_acl1_10k  my_acl1_1k  my_acl1_20k  my_acl1_300  my_acl1_30k  my_acl1_3k  my_acl1_40k  my_acl1_500  my_acl1_50k  my_acl1_5k  my_acl1_700  my_acl1_7k  my_acl1_900  my_acl1_9k  my_fw1_100  my_fw1_10k  (+31 more)
(+57 files in other folders)
